syntax = "proto3";

package proto;
option go_package = ".;protobuf";
import "common.proto";

message ValidateClientReq {
  string clientAppId = 1;
  string clientAppToken = 2;
  string appId = 3;
  string appToken = 4;
  string path = 5;
}

service ValidateClientService {
  rpc ValidateClient(ValidateClientReq) returns (CommonRes) {}
}